{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 100,
  "lineage": "7f12de62-c165-22b6-7816-55169b6262c5",
  "resources": [
    {
      "module": "module.efs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mailstore",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:security-group/sg-00eede16346a6be30",
            "description": "Allow EC2 instances to access the mailstore filesystem",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "Allow all outgoing",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00eede16346a6be30",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "Allow EC2 instances to access the mailstore filesystem on port 2049",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "cabal-efs-sg",
            "name_prefix": "",
            "owner_id": "175059541256",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:loadbalancer/net/cabal-nlb/fb81de01295b16e5",
            "arn_suffix": "net/cabal-nlb/fb81de01295b16e5",
            "dns_name": "cabal-nlb-fb81de01295b16e5.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:loadbalancer/net/cabal-nlb/fb81de01295b16e5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "cabal-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0551b57cacf6df4f5"
              }
            ],
            "subnets": [
              "subnet-0551b57cacf6df4f5"
            ],
            "tags": {
              "Name": "cabal-nlb"
            },
            "tags_all": {
              "Name": "cabal-nlb",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "vpc_id": "vpc-0d564f40e37346183",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "relay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/9aced852a95605f4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-relay-tg/7f0f8ac8afd356e0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/9aced852a95605f4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:loadbalancer/net/cabal-nlb/fb81de01295b16e5",
            "mutual_authentication": [],
            "port": 25,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.load_balancer.aws_lb_target_group.relay",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "starttls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/3acfbb1e9e4b4563",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-starttls-tg/bf3f5db148afd15a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/3acfbb1e9e4b4563",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:loadbalancer/net/cabal-nlb/fb81de01295b16e5",
            "mutual_authentication": [],
            "port": 587,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.load_balancer.aws_lb_target_group.starttls",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "submission",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/4fef8823f20fce53",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-submission-tg/58f194b42fd23c6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:listener/net/cabal-nlb/fb81de01295b16e5/4fef8823f20fce53",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:loadbalancer/net/cabal-nlb/fb81de01295b16e5",
            "mutual_authentication": [],
            "port": 465,
            "protocol": "TCP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.load_balancer.aws_lb_target_group.submission",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "imap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-imap-tg/10de6b3803d975e2",
            "arn_suffix": "targetgroup/cabal-imap-tg/10de6b3803d975e2",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "143",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-imap-tg/10de6b3803d975e2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cabal-imap-tg",
            "port": 143,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "relay",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-relay-tg/7f0f8ac8afd356e0",
            "arn_suffix": "targetgroup/cabal-smtp-relay-tg/7f0f8ac8afd356e0",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "25",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-relay-tg/7f0f8ac8afd356e0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cabal-smtp-relay-tg",
            "port": 25,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "starttls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-starttls-tg/bf3f5db148afd15a",
            "arn_suffix": "targetgroup/cabal-smtp-starttls-tg/bf3f5db148afd15a",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "587",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-starttls-tg/bf3f5db148afd15a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cabal-smtp-starttls-tg",
            "port": 587,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "submission",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-submission-tg/58f194b42fd23c6a",
            "arn_suffix": "targetgroup/cabal-smtp-submission-tg/58f194b42fd23c6a",
            "connection_termination": false,
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "port": "465",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:175059541256:targetgroup/cabal-smtp-submission-tg/58f194b42fd23c6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cabal-smtp-submission-tg",
            "port": 465,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": true,
                "type": "source_ip"
              }
            ],
            "tags_all": {
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.load_balancer.aws_lb.elb",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c86dda5c883856f5",
            "arn": "arn:aws:ec2:us-east-1:175059541256:elastic-ip/eipalloc-0c86dda5c883856f5",
            "domain": "vpc",
            "id": "eipalloc-0c86dda5c883856f5",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-206-99-56.compute-1.amazonaws.com",
            "public_ip": "34.206.99.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cabal-nat-eip-0"
            },
            "tags_all": {
              "Name": "cabal-nat-eip-0",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e349888043265b96",
            "arn": "arn:aws:ec2:us-east-1:175059541256:instance/i-0c9c29b8929d95fd5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cabal-nat-instance-profile",
            "id": "i-0c9c29b8929d95fd5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02e2f8ba72a56fede",
            "private_dns": "ip-10-2-121-138.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.121.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "environment": "development",
                  "managed_by_terraform": "y",
                  "terraform_repo": "https://github.com/cabalmail/cabal-infra"
                },
                "tags_all": {
                  "environment": "development",
                  "managed_by_terraform": "y",
                  "terraform_repo": "https://github.com/cabalmail/cabal-infra"
                },
                "throughput": 0,
                "volume_id": "vol-0a9797f3c6b4216c3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0551b57cacf6df4f5",
            "tags": {
              "Name": "cabal-nat-0"
            },
            "tags_all": {
              "Name": "cabal-nat-0",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070fa8cf57b00fc63"
            ]
          },
          "dependencies": [
            "module.vpc.aws_iam_instance_profile.nat",
            "module.vpc.aws_iam_role.nat",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:internet-gateway/igw-0bda48c25d008a919",
            "id": "igw-0bda48c25d008a919",
            "owner_id": "175059541256",
            "tags": {
              "Name": "cabal-igw"
            },
            "tags_all": {
              "Name": "cabal-igw",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-010cd093d109db4761080289494",
            "instance_id": "i-0c9c29b8929d95fd5",
            "instance_owner_id": "175059541256",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-02e2f8ba72a56fede",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010cd093d109db476",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_iam_instance_profile.nat",
            "module.vpc.aws_iam_role.nat",
            "module.vpc.aws_instance.nat",
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network",
            "module.vpc.data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0bda48c25d008a919",
            "id": "r-rtb-0831f079e6002dc101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0831f079e6002dc10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ig",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:route-table/rtb-010cd093d109db476",
            "id": "rtb-010cd093d109db476",
            "owner_id": "175059541256",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cabal-private-rt-0"
            },
            "tags_all": {
              "Name": "cabal-private-rt-0",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:route-table/rtb-0831f079e6002dc10",
            "id": "rtb-0831f079e6002dc10",
            "owner_id": "175059541256",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cabal-public-rt"
            },
            "tags_all": {
              "Name": "cabal-public-rt",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66e5b92068be330",
            "route_table_id": "rtb-010cd093d109db476",
            "subnet_id": "subnet-0e1594abd926a6161"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094a7dedc532267a5",
            "route_table_id": "rtb-0831f079e6002dc10",
            "subnet_id": "subnet-0551b57cacf6df4f5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:security-group/sg-070fa8cf57b00fc63",
            "description": "Security group for NAT instances",
            "egress": [],
            "id": "sg-070fa8cf57b00fc63",
            "ingress": [],
            "name": "cabal-nat-instance-sg",
            "name_prefix": "",
            "owner_id": "175059541256",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cabal-nat-instance-sg"
            },
            "tags_all": {
              "Name": "cabal-nat-instance-sg",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3038267422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070fa8cf57b00fc63",
            "security_group_rule_id": "sgr-082a43ae746ff1f58",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_ingress_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1083342392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-070fa8cf57b00fc63",
            "security_group_rule_id": "sgr-0458d9e5842523fda",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.nat",
            "module.vpc.aws_vpc.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:subnet/subnet-0e1594abd926a6161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1594abd926a6161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175059541256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cabal-private-subnet-0"
            },
            "tags_all": {
              "Name": "cabal-private-subnet-0",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:subnet/subnet-0551b57cacf6df4f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0551b57cacf6df4f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "175059541256",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cabal-public-subnet-0"
            },
            "tags_all": {
              "Name": "cabal-public-subnet-0",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            },
            "vpc_id": "vpc-0d564f40e37346183"
          },
          "dependencies": [
            "module.vpc.aws_vpc.network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:175059541256:vpc/vpc-0d564f40e37346183",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0d624c23e63dc53ff",
            "default_route_table_id": "rtb-0391af9961daff58a",
            "default_security_group_id": "sg-02a558fb2f01a1f8f",
            "dhcp_options_id": "dopt-0f14cffed54e60c84",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d564f40e37346183",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0391af9961daff58a",
            "owner_id": "175059541256",
            "tags": {
              "Name": "cabal-vpc"
            },
            "tags_all": {
              "Name": "cabal-vpc",
              "environment": "development",
              "managed_by_terraform": "y",
              "terraform_repo": "https://github.com/cabalmail/cabal-infra"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}